--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -86,6 +86,15 @@ section main {
   transition: 0.3s;
   cursor: pointer;
 }
+.card h6 {
+    position: absolute;
+    transform: rotate(-39deg);
+    background-color: red;
+    padding: 5px 20px;
+    left: -22px;
+    top: 10px;
+    z-index: 10;
+}
 .card:hover {
   transform: scale(1.04);
 }
