--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -22,8 +22,9 @@
     <main>
       @for (item of productList; track $index) {
       <div class="card">
+         <h6 [style.display]="item.stock > 0 ? 'none': 'unset'">{{item.stock <= 0 ? 'Out of Stock': ''}}</h6>
         <img
-          [src]="!item.images[0] ? altImage : item.images[0]"
+          [src]="(!item.images[0] || item.images[0].startsWith('https://alta.ge')) ? altImage : item.images[0]"
           alt="product"
         />
         <h4>{{ item.title }}</h4>
