--- a/src/app/shop/details/details.component.html
+++ b/src/app/shop/details/details.component.html
@@ -71,6 +71,7 @@
     <button [disabled]="prodINFO.stock <= 0" (click)="cartBTN(prodINFO._id)" class="cartBtn">
       <i class="fa-solid fa-cart-shopping"></i> Add To cart
     </button>
+    <h4 #addShow class="addSms">Product added succesfully</h4>
     <div class="line"></div>
     <div class="delivInfos">
       <p><i class="fa-solid fa-truck-fast"></i>Worldwide shipping</p>
