--- a/src/app/shop/details/details.component.css
+++ b/src/app/shop/details/details.component.css
@@ -110,11 +110,11 @@
   box-shadow: 0.4px 1px 6px 0 #9da1a7;
   border-radius: 5px;
   position: relative;
-  overflow: hidden;
   padding: 30px;
   display: flex;
   flex-direction: column;
   gap: 40px;
+  overflow: hidden;
 }
 
 .right .prices {
@@ -216,3 +216,21 @@
   box-shadow: 0 0 10px 2px black;
   cursor:not-allowed;
 }
+
+
+.addSms {
+  width: 300px;
+  text-align: center;
+  background-color: lightgreen;
+  padding: 10px;
+  border-radius: 8px 8px 0 0;
+  box-shadow: 0 0 10px green inset, 0 0 10px green;
+  color: darkgreen;
+  position: absolute;
+  bottom: -500px;
+  left: 50%;
+  transform: translate(-50%);
+  transition: 1s;
+  
+}
+
