--- a/src/app/shop/details/details.component.css
+++ b/src/app/shop/details/details.component.css
@@ -234,3 +234,19 @@
   
 }
 
+@media screen and (max-width:998px) {
+  .detailArea {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .detailArea  div {
+    width: 80% !important;
+    
+  }
+
+  .right .quantity {
+    width: 100% !important;
+    
+  }
+}
