--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -201,6 +201,7 @@ form button:hover {
 @media screen and (max-width: 998px) {
     .card {
         width: 70%;
+        transform: scale(0.6) !important;
     }
 }
 
