--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -279,7 +279,7 @@ section main {
 
   article .sidebar  {
     position: static;
-    width: 100vw;
+    width: 100%;
     display: flex;
     height: auto;
   }
